--- a/css/style.css
+++ b/css/style.css
@@ -1837,6 +1837,65 @@ nav .menu a {
   }
 }
 
+.bike-img::after {
+  content: "R$ 4999";
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90px;
+  height: 40px;
+  border-radius: 5px 0px 0px 5px;
+  top: 30px;
+  right: 0;
+  background-color: #000000;
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 18px;
+}
+
+.bike-info h4::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 12px;
+  height: 8px;
+  background-color: #E4A30B;
+  top: 8px;
+}
+
+.container-black {
+  background-color: #111111;
+  box-shadow: 0px 0px 0px 0px, 1000px 0px 0px 0px #111111;
+  position: relative;
+  z-index: 1;
+}
+.container-black::after {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 18%;
+  height: 100%;
+  top: 0;
+  background-color: #ffffff;
+}
+@media screen and (max-width: 960px) {
+  .container-black {
+    box-shadow: none;
+  }
+  .container-black::after {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .btn-more {
+    margin-top: 32px;
+    justify-content: flex-start;
+  }
+}
+
 .icon {
   max-width: 24px;
   transition: 0.5s ease;
